Small changes to text

--- a/_posts/2024-09-29-nn-1.md
+++ b/_posts/2024-09-29-nn-1.md
@@ -1,5 +1,5 @@
 ---
-title: 'Zero-to-Sidekick Neural Networks: Part 1- What is it?'
+title: 'Zero-to-Sidekick Neural Networks: Part 1- What are they?'
 date: 2024-09-29
 permalink: /posts/2024/09/nn-1/
 ---
